Revise index.html for Grandma's Cookbook
Updated the HTML structure and content for the cookbook.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <title>Interactive Cookbook</title>\n    <link rel="stylesheet" href="styles.css">\n</head>\n<body>\n    <header>\n        <h1>Nonna's Cookbook</h1>\n        <input type="text" id="search" placeholder="Search for a recipe...">\n    </header>\n    \n    <section id="gallery">\n        <h2>Photo Gallery</h2>\n        <div class="gallery-images">\n            <!-- Image thumbnails -->\n        </div>\n    </section>\n\n    <section id="history">\n        <h2>Our History</h2>\n        <p>Details about the cookbook and its origins.</p>\n    </section>\n\n    <section id="recipes">\n        <h2>Recipes</h2>\n        <div class="recipe-card">\n            <h3>Recipe Title</h3>\n            <img src="path/to/image.jpg" alt="Dish Name">\n            <h4>Ingredients</h4>\n            <ul>\n                <li>Ingredient 1</li>\n                <li>Ingredient 2</li>\n                <!-- List other ingredients -->\n            </ul>\n            <h4>Instructions</h4>\n            <p>Step by step instructions to prepare the dish.</p>\n        </div>\n        <!-- Include more recipes -->\n    </section>\n\n    <footer>\n        <p>&copy; 2026 Nonna's Cookbook. All rights reserved.</p>\n    </footer>\n    \n    <script src="script.js"></script>\n</body>\n</html>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Grandma's Cookbook</title>
+</head>
+<body>
+  <h1>Grandma's Cookbook 🍝</h1>
+
+  <h2>Lasagna</h2>
+  <p><strong>Ingredients:</strong> Noodles, Cheese, Meat</p>
+  <p><strong>Instructions:</strong> Layer and bake at 375°F.</p>
+
+</body>
+</html>
