Change title from 'Grandma's Cookbook' to 'Nonnas Cookbook'

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Grandma's Cookbook</title>
+  <title>Nonnas Cookbook</title>
 </head>
 <body>
   <h1>Grandma's Cookbook 🍝</h1>
