Update title from 'Grandma's' to 'Nonna's'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Nonnas Cookbook</title>
 </head>
 <body>
-  <h1>Grandma's Cookbook 🍝</h1>
+  <h1>Nonna's Cookbook 🍝</h1>
 
   <h2>Lasagna</h2>
   <p><strong>Ingredients:</strong> Noodles, Cheese, Meat</p>
